--- a/example.rmd
+++ b/example.rmd
@@ -4,14 +4,14 @@ main_findings:
   decreasing, **thickness increasing** and **current density
   decreasing** with distance from the Sun. And they are probably
   **generated locally** beyond 1 AU.
-- Background sheared magnetic field plays an important role in
-  determining the efficiency of ion pitch angle
-- "scattering, and characterize three ion populations: **transient,
-  trapped, regular**."
+- "Background sheared magnetic field plays an important role in
+  determining the efficiency of ion pitch angle scattering, and
+  characterize three ion populations: **transient, trapped, regular**."
 - Test dsaad
 - finding4
 - finding5
 - finding6
+output: "posterdown::posterdown_betterland"
 title: Posterdown Example
 toc-title: Table of contents
 ---
